fixed the alignment of the stars

--- a/week05/styles/form.css
+++ b/week05/styles/form.css
@@ -84,8 +84,8 @@ input[type="radio"] {
     margin: 0 1rem 0 2.2rem;
 }
 
-.star {
-    margin: 0 1.7rem;
+label.star {
+    margin: 0 1.75rem;
 }
 
 .checkbox {
